Fix background stretching

--- a/styles/sass/style.sass
+++ b/styles/sass/style.sass
@@ -42,7 +42,7 @@ canvas
 #canvas
   position: fixed
   inset: 0
-  height: 100%
+  // height: 100%
   width: 100%
 
 .container
